feat: 각 카테고리 검색 기능 및 통합 검색 기능 추가